Horizontal scrollbar issue fixed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,12 @@
 				font-size: 100%; /* Changed from 80% BWB */
 				background-color: #fcfcfc;
 				color: #000;
+
+				/* START - Fix horizontal scrollbar */
+				-webkit-box-sizing: border-box;
+				-moz-box-sizing: border-box;
+				box-sizing: border-box;
+				/* END - Fix horizontal scrollbar */
 			}
 			div.two-columns:after
 			{
@@ -59,6 +65,12 @@
 			{
 				padding: 0px 10px;	/* 1px is there to get past a margin rendering
 							   bug in Netscape 7 and older FireFox */
+
+				/* START - Fix horizontal scrollbar */
+				-webkit-box-sizing: border-box;
+				-moz-box-sizing: border-box;
+				box-sizing: border-box;
+				/* END - Fix horizontal scrollbar */
 			}
 
     span.left-link
